<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".member_order_menu_select">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/주문"
            android:fontFamily="@font/nanumgothicextrabold"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="137dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="15dp"

            app:srcCompat="@android:drawable/alert_dark_frame"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:text="@string/메뉴명" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/nanumgothic"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/nanumgothicbold"
                    android:text="@string/수량" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="134dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nanumgothicbold"
                    android:text="점포명" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/nanumgothic"
                    android:text="TextView" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="301dp"
        android:text="@string/설명"
        android:fontFamily="@font/nanumgothicbold" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:text="@string/TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_bucket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:onClick="onClick"
            android:text="@string/장바구니"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="@drawable/btn_text_yellow"
            android:background="@drawable/btn_white"
            />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:onClick="onClick"
            android:text="@string/바로주문"
            android:fontFamily="@font/nanumgothicbold"
            android:textColor="#FFFFFFFF"
            android:background="@drawable/btn_yellow"
             />
    </LinearLayout>

</LinearLayout>