<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".member_favorite_detail">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible">
        <!-- main layout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="즐겨찾기"
                        android:fontFamily="@font/nanumgothicextrabold"
                        android:textSize="20sp"
                        android:textColor="#FFFFFFFF"
                        android:layout_gravity="center"/>
                </android.support.v7.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"

                        tools:ignore="ContentDescription"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView52"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="@string/메뉴명"
                                android:fontFamily="@font/nanumgothicbold"
                                android:textAlignment="viewEnd" />

                            <TextView
                                android:id="@+id/textView57"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="17dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="@string/TextView" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView54"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="6dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="@string/경기장명"
                                android:fontFamily="@font/nanumgothicbold"
                                android:textAlignment="viewEnd" />

                            <TextView
                                android:id="@+id/textView56"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="@string/textview" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView53"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="22dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginEnd="0dp"
                                android:text="@string/가격"
                                android:fontFamily="@font/nanumgothicbold"
                                android:textAlignment="viewEnd" />

                            <TextView
                                android:id="@+id/textView58"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:text="@string/TextView" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="202dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="35dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/btn_yellow"
                        android:fontFamily="@font/nanumgothicbold"
                        android:onClick="onClick"
                        android:text="@string/바로주문"
                        android:textColor="#FFFFFFFF" />

                    <Button
                        android:id="@+id/btn_bucket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/btn_yellow"
                        android:fontFamily="@font/nanumgothicbold"
                        android:onClick="onClick"
                        android:text="@string/장바구니"
                        android:textColor="#FFFFFFFF" />

                    <Button
                        android:id="@+id/btn_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/btn_white"
                        android:fontFamily="@font/nanumgothicbold"
                        android:onClick="onClick"
                        android:text="@string/뒤로가기"
                        android:textColor="@drawable/btn_text_yellow" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

        <!--navigation drawer-->
        <android.support.design.widget.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/main_nav_header"
            app:menu="@menu/main_navigator" />

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>