<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".food_regist">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible">
        <!-- main layout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/nanumgothicextrabold"
                        android:text="@string/점포등록"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp" />
                </android.support.v7.widget.Toolbar>

                <TextView
                    android:id="@+id/textView97"
                    android:layout_width="wrap_content"
                    android:layout_height="386dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="점포를 등록 하시겠습니까?"
                    android:fontFamily="@font/nanumgothicbold"
                    android:textSize="20dp"
                    tools:ignore="HardcodedText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_back"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/취소"
                        android:fontFamily="@font/nanumgothicbold"
                        android:background="@drawable/btn_white"
                        android:textColor="@drawable/btn_text_yellow"/>

                    <Button
                        android:id="@+id/btn_regist"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:text="@string/등록"
                        android:fontFamily="@font/nanumgothicbold"
                        android:background="@drawable/btn_yellow"
                        android:textColor="#FFFFFFFF"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <!--navigation drawer-->
        <android.support.design.widget.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/main_nav_header"
            app:menu="@menu/food_navigator" />

    </android.support.v4.widget.DrawerLayout>
</LinearLayout>